[gd_scene load_steps=3 format=3 uid="uid://c70ia0j5g4yor"]

[ext_resource type="Script" path="res://src/scripts/ui/download_config_panel.gd" id="1_3vy0d"]
[ext_resource type="Texture2D" uid="uid://c4sv5wkd2de3o" path="res://src/resources/assets/ui/paste.svg" id="2_fmic5"]

[node name="DownloadConfigPanel" type="PopupPanel"]
initial_position = 2
size = Vector2i(920, 640)
visible = true
script = ExtResource("1_3vy0d")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 920.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Download Config"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="URLEdit" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "URL"

[node name="PasteLink" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
icon = ExtResource("2_fmic5")
icon_alignment = 1
expand_icon = true

[node name="Download" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Download"

[node name="Cancel" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/PasteLink" to="." method="_on_paste_link_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
